--- a/index.html
+++ b/index.html
@@ -476,8 +476,8 @@
     </div>
 
     <footer>
-        <p>© 2025 Mama's Top Picks - All products carefully selected for quality and safety</p>
-        <p class="affiliate-notice">If you choose to make a purchase through some of the links on this page, we'll receive a small thank-you commission as an Amazon affiliate--at no cost to you!</p>
+        <p>© 2025 Mama's Top Picks - All products carefully selected for quality and safety.</p>
+        <p class="affiliate-notice">If you choose to make a purchase through some of the links on this page, we'll receive a small thank-you commission as an Amazon affiliate—at no cost to you!</p>
     </footer>
 
     <script>
