--- a/index.html
+++ b/index.html
@@ -473,12 +473,20 @@
             color: var(--text-secondary);
             margin-top: auto;
             position: relative;
+            padding-bottom: var(--spacing-xs);
+            min-height: 24px;
+        }
+
+        .product-country {
+            display: flex;
+            align-items: center;
         }
 
         .product-category {
             margin-left: auto;
             position: absolute;
             right: 0;
+            bottom: var(--spacing-xs);
         }
 
         .product-country {
@@ -628,7 +636,7 @@
         <div class="container">
             <h1>NontoxicGoods.com</h1>
             <p class="tagline">Cleaner products for a healthier life.</p>
-            <p>The best and healthiest things I've found that my family uses every day!</p>
+            <p><i>The best and healthiest things I've found that my family uses every day!</i></p>
         </div>
     </header>
 
@@ -664,19 +672,21 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <div class="footer-logo">NontoxicGoods</div>
+                    <div class="footer-logo">NontoxicGoods.com</div>
                     <p>&copy; 2025 NontoxicGoods.com</p>
                     <p>A curated collection of non-toxic products for a healthier life.</p>
+                    <p>Read more about clean eating and clean living at <a href="https://tallowandgrace.com">tallowandgrace.com</a>.</a></p>
                 </div>
 
                 <div class="footer-column">
                     <h4>Contact</h4>
                     <p>Have feedback, updates, or product suggestions?</p>
                     <p>We'd love to hear from you!</p>
-                    <p class="footer-email"><a href="mailto:hellof@nontoxicgoods.com">hellof@nontoxicgoods.com</a></p>
+                    <p class="footer-email"><a href="mailto:hello@nontoxicgoods.com">hello@nontoxicgoods.com</a></p>
                 </div>
 
                 <div class="footer-column">
+                    <h4></h4>
                     <p><em>If you choose to make a purchase through some of the links on this page, we may receive a
                             small thank-you commission as an Amazon affiliate—at no cost to you! Thank you for your
                             support!</em></p>
