--- a/index.html
+++ b/index.html
@@ -675,13 +675,12 @@
                     <div class="footer-logo">NontoxicGoods.com</div>
                     <p>&copy; 2025 NontoxicGoods.com</p>
                     <p>A curated collection of non-toxic products for a healthier life.</p>
-                    <p>Read more about clean eating and clean living at <a href="https://tallowandgrace.com">tallowandgrace.com</a>.</a></p>
+                    <p>Read more about clean eating and non-toxic living at <a href="https://tallowandgrace.com">tallowandgrace.com</a>.</a></p>
                 </div>
 
                 <div class="footer-column">
                     <h4>Contact</h4>
-                    <p>Have feedback, updates, or product suggestions?</p>
-                    <p>We'd love to hear from you!</p>
+                    <p>Have feedback, updates, or product suggestions? We'd love to hear from you!</p>
                     <p class="footer-email"><a href="mailto:hello@nontoxicgoods.com">hello@nontoxicgoods.com</a></p>
                 </div>
 
