--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                     <p>&copy; 2025 NontoxicGoods.com</p>
                     <p>A curated collection of non-toxic products for a healthier life.</p>
                     <p>Read more about clean eating and non-toxic living at <b><a
-                            href="https://tallowandgrace.com">tallowandgrace.com</a></b>.</p>
+                            href="https://thecarnivoremama.com">thecarnivoremama.com</a></b>.</p>
                 </div>
 
                 <div class="footer-column">
